k8s-app/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-billing-deployment
  namespace: prod-mspr-ci
spec:
  selector:
    matchLabels:
      app: doc-billing
  replicas: 1
  template:
    metadata:
      labels:
        app: doc-billing
    spec:
      containers:
        - name: doc-billing
          image: "docker.pkg.github.com/lperdereau/mspr-billing-api-doc/documentation:latest"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
