k8s-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-billing-service
  namespace: doc-billing
  labels:
    app: doc-billing
spec:
  type: ClusterIP
  selector:
    app: doc-billing
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
