k8s-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: doc-billing-ingress
  namespace: doc-billing
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - elixir.k8s.louisperdereau.fr
    secretName: hello-app-tls
  rules:
  - host: elixir.k8s.louisperdereau.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: doc-billing-service
          servicePort: 80
